Prevent breadcrumbs from shifting inappropriately when following a link with a named-anchor suffix
git-svn-id: http://svn.codehaus.org/geoserver/branches/1.7.x@13419 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 057eff7b1804ca5a1241d85a29fb1d06909b52c8 [formerly 73494f597bfde6132c1189268653722845375c64]
Former-commit-id: 774fd03c4349aa42d676600292097687c0faac28

--- a/doc/en/theme/_static/default.css
+++ b/doc/en/theme/_static/default.css
@@ -140,7 +140,6 @@ background: #fff url(./chrome/main-bg.png) repeat-x;
 
 #content {
 width: 740px; /*790px total*/
-overflow: hidden;
 float: left;
 margin: -3px 0 0 0;
 padding: 1216px 28px 0 22px;
@@ -338,6 +337,10 @@ padding: 0 0.5em;
 
 #content #relatedlinks li.first a {
 padding: 0 0 0 0.5em;
+}
+
+#content .section {
+overflow: hidden;
 }
 
 #content h1 {
